recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value lentgh
		snowFlake(levels=levels-1, lentgh=length/2)
                                           ^